WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75911
REGRESSION: d3 Bullet Charts demo doesn't work (call with argument assignment is broken)
https://bugs.webkit.org/show_bug.cgi?id=75911
Summary
REGRESSION: d3 Bullet Charts demo doesn't work (call with argument assignment...
Geoffrey Garen
Reported
2012-01-09 16:41:16 PST
http://mbostock.github.com/d3/ex/bullet.html
Displays no chart on ToT, but it works on Safari 5.1.2.
Attachments
Patch
(6.46 KB, patch)
2012-01-09 17:22 PST
,
Geoffrey Garen
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2012-01-09 16:51:15 PST
<
rdar://problem/10650878
>
Geoffrey Garen
Comment 2
2012-01-09 17:22:28 PST
Created
attachment 121766
[details]
Patch
Filip Pizlo
Comment 3
2012-01-09 17:30:17 PST
Comment on
attachment 121766
[details]
Patch Yay! r=me
Filip Pizlo
Comment 4
2012-01-09 17:30:30 PST
Any performance impact?
Geoffrey Garen
Comment 5
2012-01-10 11:03:59 PST
> Any performance impact?
Bencher says 1.002x worse on SunSpider and v8 -- seems reasonable to call that "no change". Bytecode generation for f.apply is definitely worse by one op_mov. This is theoretically fixable with more robust optimization information in the AST, but I think that's probably the wrong direction -- long-term, we just want to compile f.apply in the DFG, which will elide the op_mov.
Filip Pizlo
Comment 6
2012-01-10 11:46:03 PST
(In reply to
comment #5
)
> > Any performance impact? > > Bencher says 1.002x worse on SunSpider and v8 -- seems reasonable to call that "no change". > > Bytecode generation for f.apply is definitely worse by one op_mov. This is theoretically fixable with more robust optimization information in the AST, but I think that's probably the wrong direction -- long-term, we just want to compile f.apply in the DFG, which will elide the op_mov.
Agree!
Geoffrey Garen
Comment 7
2012-01-11 16:14:46 PST
Committed
r104762
: <
http://trac.webkit.org/changeset/104762
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug